<?xml version="1.0"?>
<package>
  <name>ddynamic_reconfigure</name>
  <version>0.0.3</version>
  <description>The ddynamic_reconfigure package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>Proprietary</license>

  <!-- <url type="website">http://wiki.ros.org/ddynamic_reconfigure</url> -->

  <author email="hilario.tome@pal-robotics.com">Hilario Tome</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>


</package>
